# rust_solidity_deep_analyzer

./: .analyzerignore  Cargo.toml  DESCRIPTION.md  LICENSE  README.md
contracts/: ERC20Upgradable.sol
reports/: Combinations.md  ERC20Upgradeable.md  ETHRejectingContract.md  EntropyCallbackMock.md  EntropyMock.md  FisherYatesRejection.md  FisherYatesWithRejectionTester.md  GuaranteedMinimumPayoutCalculator.md  IJackpot.md  IJackpotLPManager.md  IJackpotTicketNFT.md  IPayoutCalculator.md  IScaledEntropyProvider.md  Jackpot.md  JackpotBridgeManager.md  JackpotErrors.md  JackpotLPManager.md  JackpotTicketNFT.md  MockDepository.md  MockJackpot.md  ReentrantUSDCMock.md  ScaledEntropyProvider.md  ScaledEntropyProviderMock.md  TicketComboTracker.md  TicketComboTrackerTester.md  USDCMock.md  UintCasts.md  UintCastsTester.md
reports/0_relations/: contract_interactions.dot  contract_interactions.json  contract_interactions.md  cross_contract_state_dependencies.dot  cross_contract_state_dependencies.json  cross_contract_state_dependencies.md  function_calls.dot  function_calls.json  function_calls.md  relations.md  state_variables.dot  state_variables.json  state_variables.md
src/: analyzer.rs  call_graph_report.rs  contract_interaction_reports.rs  dataflow.rs  graph_generator.rs  json_reports.rs  main.rs  models.rs  output.rs  parser.rs  relations.rs  scanner.rs  state_var_report.rs
