[package]
name = "solidity-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
solang-parser = "0.3"
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
prettytable-rs = "0.10"
colored = "2.1"
